--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = dev.mayankmkh.intellij.linear
-pluginName = Linear Tasks
-pluginRepositoryUrl = https://github.com/mayankmkh/linear-app-plugin
-pluginVersion = 2.0.0
+pluginGroup = com.myvirtualab.intellij.loonar
+pluginName = Loonar Tasks
+pluginRepositoryUrl = https://github.com/myvirtualab-it/loonar-jetbrain-plugin
+pluginVersion = 1.0.0
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
